# openvr_docs-staging

docs/: Driver_API_Documentation.md
samples/drivers/: .clang-format  vs-openvr_samples.sln
samples/drivers/drivers/: CMakeLists.txt
samples/drivers/drivers/pathreg/: CMakeLists.txt  README.md
samples/drivers/drivers/pathreg/src/: main.cpp
samples/drivers/drivers/simplecontroller/src/: controller_device_driver.cpp  controller_device_driver.h
samples/drivers/drivers/simpletrackers/simpletrackers/resources/input/: mytracker_profile.json
samples/drivers/drivers/simpletrackers/src/: tracker_device_driver.cpp
samples/drivers/drivers/tutorial/: vs-sample.sln
samples/drivers/utils/: CMakeLists.txt
samples/drivers/utils/vr/: CMakeLists.txt  vrpathreg.cpp  vrpathreg.h
